Bug 730853 - Make sure we occasionally CC with lots of incremental GCs (r=smaug,mccr8)